--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <h1>Github</h1>
     <h2>Segundo commit</h2>
     <h3>Tercer commit</h3>
+
+    <button>Adopta un gatito</button>
 </body>
 
 </html>
