Descripcion de un producto

--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
     <h3>Tercer commit</h3>
 
     <h4>Prueba de pull</h4>
+    <div>
+        <h3>Producto:</h3>
+        <p>Nombre: </p>
+        <p>Descripción: </p>
+        <p>Precio: </p>
 
+    </div>
     <button>Adopta un gatito</button>
 </body>
 
